add formatting, styling, and fix directory structure.

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,41 @@
-*
+
+body {
+  background-color: rgb(218, 255, 252);
+}
+
+td, th, label, input {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  font-weight: normal;
+}
+
+header {
+  background-color: rgb(221, 120, 109);
+}
+
+nav {
+  padding: 15px 0px 10px 50px;
+  text-decoration: none;
+}
+
+h1 {
+  color: rgb(52, 192, 180);
+}
+
+#ul-nav {
+  list-style-type: none;
+}
+
+.nav li, h2, h3, .ul-footer li, legend, button, #copyright {
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.nav li {
+  display: inline;
+  margin: 50px 15px 0px 0px;
+  font-weight: 600;
+  font-size: 1.2em;
+}
